Contact info for beta

--- a/indexBeta.html
+++ b/indexBeta.html
@@ -2848,6 +2848,7 @@
         gtag('config', 'UA-71606599-2');
     </script>
         <a href="index.html">Go back to Stable Release!</a>
+    Formula Problems? Contact <a href="mailto:myh10232223@yahoo.com">putty174</a>
 </body>
 
 </html>
