AG Options added to webpage

--- a/indexBeta.html
+++ b/indexBeta.html
@@ -152,7 +152,7 @@
                                         <input type="checkbox" onclick="updateAllFreebies(this); updateAllFrebiesCheckboxStatus();" id="allFreebies"><label for="option">All Farmable Demons</label>
                                         <div id="freebies" class="row align-items-center">
                                             <div class="col-12 col-md-auto">
-                                                <input type="checkbox" onclick="updateFreebieRegion(this); updateAllFrebiesCheckboxStatus();" id="allFragments"><label for="option">Fragment</label>
+                                                <input type="checkbox" onclick="updateFreebieRegion(this); updateAllFrebiesCheckboxStatus();" id="allFragments"><label for="allFragments">Fragment</label>
                                                 <ul>
                                                     <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="fragment" value="Apis">Apis</label></li>
                                                     <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="fragment" value="Dakini">Dakini</label></li>
@@ -162,6 +162,29 @@
                                                     <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="fragment" value="Mitra">Mitra</label></li>
                                                     <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="fragment" value="Mothman">Mothman</label></li>
                                                     <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="fragment" value="Power">Power</label></li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-12 col-md-auto">
+                                                <input type="checkbox" onclick="updateFreebieRegion(this); updateAllFrebiesCheckboxStatus();" id="allAG"><label for="allAG">Aura Gate Talks</label>
+                                                <ul>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Abraxas">Abraxas</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Dis">Dis</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Hathor">Hathor</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Heqet">Heqet</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="High Pixie">High Pixie</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Ikusa">Ikusa</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Isis">Isis</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Kelpie">Kelpie</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Kurama Tengu">Kurama Tengu</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Legion">Legion</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Lilim">Lilim</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Naga">Naga</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Nue">Nue</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Principality">Principality</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Shadow">Shadow</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Shiisaa">Shiisaa</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Take-Minakata">Take-Minakata</label></li>
+                                                    <li><label><input type="checkbox" onclick="updateFreebie(this); updateAllFrebiesCheckboxStatus();" class="talkAG" value="Yaksini">Yaksini</label></li>
                                                 </ul>
                                             </div>
                                             <div class="col-12 col-md-auto">
