--- a/index.html
+++ b/index.html
@@ -2915,7 +2915,7 @@
 
         gtag('config', 'UA-71606599-2');
     </script>
-    <a href="indexBeta.html">Try the beta!</a>
+    <a href="indexBeta.html">Try the beta!</a> Find recipies that include Race Discounts, and treat farmable demons as free ingredients!
 </body>
 
 </html>
