Demon Guide: Fixed missing type for Lakshmi

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                           <table><tr><td id="DG-CMN">U</td><td id="DG-ARA">U</td><td id="DG-PRO">U</td><td id="DG-PSY">U</td><td id="DG-ELE"></td></tr></table>
                         </a></td>
                         <td><a href="#Lakshmi"><img src="images/devil/megami_rakusyumi.png"><br>Lakshmi
-                          <table><tr><td id="DG-CMN"></td><td id="DG-ARA">U</td><td id="DG-PRO">U</td><td id="DG-PSY">U</td><td id="DG-ELE"></td></tr></table>
+                          <table><tr><td id="DG-CMN"></td><td id="DG-ARA">U</td><td id="DG-PRO">U</td><td id="DG-PSY">U</td>B<td id="DG-ELE"></td></tr></table>
                         </a></td>
                         <td><a href="#Lilith"><img src="images/devil/yoma_ririsu.png"><br>Lilith
                           <table><tr><td id="DG-CMN">U</td><td id="DG-ARA"></td><td id="DG-PRO">U</td><td id="DG-PSY">U</td><td id="DG-ELE">B</td></tr></table>
