Demon Guide: Fix
-Removed Usable for Lucifer's Aragami archetype in ToC

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                           <table><tr><td id="DG-CMN">U</td><td id="DG-ARA"></td><td id="DG-PRO">U</td><td id="DG-PSY">U</td><td id="DG-ELE">B</td></tr></table>
                         </a></td>
                         <td><a href="#Lucifer"><img src="images/devil/maou_rusifua.png"><br>Lucifer
-                          <table><tr><td id="DG-CMN"></td><td id="DG-ARA">U</td><td id="DG-PRO"></td><td id="DG-PSY">B</td><td id="DG-ELE">U</td></tr></table>
+                          <table><tr><td id="DG-CMN"></td><td id="DG-ARA"></td><td id="DG-PRO"></td><td id="DG-PSY">B</td><td id="DG-ELE">U</td></tr></table>
                         </a></td>
                         <td><a href="#Mara"><img src="images/devil/maou_mara.png"><br>Mara
                           <table><tr><td id="DG-CMN"></td><td id="DG-ARA"></td><td id="DG-PRO"></td><td id="DG-PSY">B</td><td id="DG-ELE">U</td></tr></table>
