Demon Guide: Fix
- Removed Mara's Elementalist usable rating in ToC

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                           <table><tr><td id="DG-CMN"></td><td id="DG-ARA"></td><td id="DG-PRO"></td><td id="DG-PSY">B</td><td id="DG-ELE">U</td></tr></table>
                         </a></td>
                         <td><a href="#Mara"><img src="images/devil/maou_mara.png"><br>Mara
-                          <table><tr><td id="DG-CMN"></td><td id="DG-ARA"></td><td id="DG-PRO"></td><td id="DG-PSY">B</td><td id="DG-ELE">U</td></tr></table>
+                          <table><tr><td id="DG-CMN"></td><td id="DG-ARA"></td><td id="DG-PRO"></td><td id="DG-PSY">B</td><td id="DG-ELE"></td></tr></table>
                         </a></li>
                         <td><a href="#Mastema"><img src="images/devil/daitensi_mansemato.png"><br>Mastema
                           <table><tr><td id="DG-CMN"></td><td id="DG-ARA">U</td><td id="DG-PRO"></td><td id="DG-PSY">B</td><td id="DG-ELE">U</td></tr></table>
