Demon Guide: Renamed 4 star demons
- Changed to notable demons

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                     <br>
                     
                     <table id="DG-ToC"><tbody>
-                      <tr><td id="DG-Table-Label" colspan="10"><b>4 Star Demons (WIP)</b></td></tr>
+                      <tr><td id="DG-Table-Label" colspan="7"><b>Notable Demons (WIP)</b></td></tr>
                       <tr>
                         <td id="DG-Table-Label"><b>Gacha</b></td>
                         <td><a href="#Chernobog"><img src="images/devil/Chernobog.png"><br>Chernobog</a></td>
@@ -589,6 +589,21 @@
                         <td><a href="#JeanneDArc"><img src="images/devil/eiyuu_jannu.png"><br>Jeanne D'Arc</a></td>
                         <td><a href="#Persephone"><img src="images/devil/Persephone.jpg"><br>Persephone</a></td>
                         <td><a href="#WhiteRider"><img src="images/devil/majin_waitonaito.png"><br>White Rider</a></td>
+                      </tr>
+                      <tr>
+                        <td id="DG-Table-Label" rowspan = "2"><b>4 Star</b></td>
+                        <td><a href="#Fenrir"><img src="images/devil/youjyuu_huenriru.png"><br>Fenrir</a></td>
+                        <td><a href="#Gucumatz"><img src="images/devil/ryuusin_gukumatu.png"><br>Gucumatz</a></td>
+                        <td><a href="#Hecatoncheires"><img src="images/devil/Hecatoncheires.png"><br>Hecatoncheires</a></td>
+                        <td><a href="#Loki"><img src="images/devil/maou_roki.png"><br>Loki</a></td>
+                        <td><a href="#Rakshasa"><img src="images/devil/Rakshasa.png"><br>Rakshasa</a></td>
+                        <td><a href="#Rangda"><img src="images/devil/kijyo_randa.png"><br>Rangda</a></td>
+                      </tr>
+                      <tr>
+                        <td><a href="#Sandalphon"><img src="images/devil/daitensi_sandaruhuon.png"><br>Sandalphon</a></td>
+                        <td><a href="#Sleipnir"><img src="images/devil/seijyuu_sureipuniru.png"><br>Sleipnir</a></td>
+                        <td><a href="#Yatagarasu"><img src="images/devil/reityou_yatagarasu.png"><br>Yatagarasu</a></td>
+                        <td><a href="#ZhongKui"><img src="images/devil/kisin_syouki.png"><br>Zhong Kui</a></td>
                       </tr>
                     </tbody></table>
                   </div>
