Demon Guide: Updated legend
- Added info for soon to be added Gacha Skill Ratings

--- a/index.html
+++ b/index.html
@@ -446,9 +446,20 @@
                 <p id="DG-Top"><strong>Table of Contents</strong></p>
                 <ul>
                   <li>Summary can be found here for each demon. Click on their portrait to view the specific writeup</li>
-                  <li>_ = Worst</li>
-                  <li>U = Usable</li>
-                  <li>B = Best</li>
+                  <li><strong>Archetype Rating:</strong>
+                      <ul>
+                        <li>_ = Worst. The other archetypes are mostly better than this one</li>
+                        <li>U = Usable. Could have its uses depending on the sort of build you want to run</li>
+                        <li>B = Best. Considered the best, most suited to the demon/build people generally go for</li>
+                      </ul>
+                  </li>
+                  <li><strong>Gacha Skill Rating: (WIP)</strong>
+                      <ul>
+                        <li>Bad. Could easily be replaced, not worth transfering to another demon</li>
+                        <li>Acceptable. Usable on the demon, but can be transferred away/replaced if you want it on another demon</li>
+                        <li>Keep. Recommended to hold onto the skill, it works well on the demon</li>
+                      </ul>
+                  </li>
                 </ul>
                   <div id="DG-Table">
                     <table id="DG-ToC"><tbody>
